--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -8,6 +8,16 @@
     <string name="polar">Polar</string>
     <string name="xy">x, y</string>
 
+    <string name="x">x</string>
+    <string name="y">y</string>
+    <string name="theta">Ɵ</string>
+    <string name="degree">°</string>
+
+    <string name="translate">Translate</string>
+    <string name="rotate">Rotate</string>
+    <string name="reflect">Reflect</string>
+    <string name="dilate">Dilate</string>
+
     <string name="hello_analyze_fragment">Hello Analyze Fragment</string>
     <string name="hello_draw_fragment">Hello Draw Fragment</string>
 </resources>
