--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
 
-    <string name="action_settings">Settings</string>
-
     <string name="tab_draw">Draw</string>
     <string name="tab_analyze">Analyze</string>
     <string name="side_angle">Side-Angle</string>
@@ -12,6 +10,13 @@
     <string name="y">y</string>
     <string name="theta">Ɵ</string>
     <string name="degree">°</string>
+
+    <string name="action_translate">Translate</string>
+    <string name="action_rotate">Rotate</string>
+    <string name="action_reflect">Reflect</string>
+    <string name="action_dilate">Dilate</string>
+
+    <string name="action_settings">Settings</string>
 
     <string name="translate">Translate</string>
     <string name="rotate">Rotate</string>
