Added tab order to edittext fields.

--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="tab_draw">Draw</string>
     <string name="tab_analyze">Analyze</string>
 
+    <!--TODO: Placeholder:-->
     <string name="unknown">\?</string>
 
     <!--TODO: May no longer be needed:-->
